--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-.DS_Store
-out
 node_modules
-removed
-*.log
-*.tsbuildinfo
-package-lock.json
-logs.txt
-*.lock
-*.wasm
-wikis
-out.png
-.vim
-test-data/staging
-build
+#out
+#removed
+#*.log
+#*.tsbuildinfo
+#package-lock.json
+#logs.txt
+#*.lock
+#*.wasm
+#wikis
+#out.png
+#.vim
+#test-data/staging
+#build
